# yscope-dev-utils

linters/taskfile-lint/: pyproject.toml
linters/taskfile-lint/src/taskfile_lint/: __init__.py  main.py
taskfiles/: utils-checksum.yaml  utils-misc.yaml
